src/grid/themes/spreadsheet.css
#grid-container.spreadsheet #title-bar {
  padding: 10px;
  font-weight: bold;
  font-size: large;
  border-left: black 1px solid;
  border-right: black 1px solid;
  border-top: black 1px solid;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

#grid-container.spreadsheet #header-content {
  font-weight: bold;
}

#grid-container.spreadsheet #main-content {
  border-left: black 1px solid;
  border-right: black 1px solid;
  border-bottom: black 1px solid;
}

#grid-container.spreadsheet #grid-footer {
  border: black 1px solid;
}

#grid-container.spreadsheet #left-view {
  border-top: black 1px solid;
}

#grid-container.spreadsheet #right-view {
  border-top: black 1px solid;
}

#grid-container.spreadsheet #left-header-view{
  border-top: black 1px solid;
}

#grid-container.spreadsheet #right-header-view{
  border-top: black 1px solid;
}

#grid-container.spreadsheet .hci-grid-header {
  border-bottom: none;
}

#grid-container.spreadsheet .hci-grid-header:not(.last) {
  border-right: black 1px solid;
}

#grid-container.spreadsheet .hci-grid-cell {
  border-bottom: black 1px solid;
}

#grid-container.spreadsheet .hci-grid-cell:not(.last) {
  border-right: black 1px solid;
}

#grid-container.spreadsheet .hci-grid-cell.selected {
  background-color: #ffffaa;
}

#grid-container.spreadsheet .hci-grid-row.selected {
  background-color: #ffffaa;
}

#grid-container.spreadsheet .ng-invalid {
  color: red;
}

